test/Fail/Polarity-pragma-for-module-parameter.agda
{-# OPTIONS --warning=error #-}

module _ (F : Set → Set) where

{-# POLARITY F + #-}
